# In_NetworkComputing

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  Computer.cpp  Computer.hpp  README.md  main.cpp  multi-run.sh  test.sh
.github/workflows/: cmake-multi-platform.yml
Network/: Derivations.hpp  Message.cpp  Message.hpp  Port.cpp  Port.hpp
Network/Switches/: Aggregate.cpp  Aggregate.hpp  Core.cpp  Core.hpp  Edge.cpp  Edge.hpp  ISwitch.hpp
docs/: FatTree.drawio
scripts/: format-code.sh  plotResults.py
source/: Computer.cpp  Computer.hpp  cxxopts.hpp  main.cpp
source/Network/: Constants.cpp  Constants.hpp  Derivations.hpp  MPI.cpp  MPI.hpp  Message.cpp  Message.hpp  Port.cpp  Port.hpp
source/Network/Switches/: Aggregate.cpp  Aggregate.hpp  Core.cpp  Core.hpp  Edge.cpp  Edge.hpp  ISwitch.cpp  ISwitch.hpp  InterSwitchMessages.cpp  InterSwitchMessages.hpp
